# RuleEngine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: architecture.md
src/rule_engine/: __init__.py  context.py  engine.py  event.py  exceptions.py  rule.py
tests/: test_engine.py
