[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rule_engine"
version = "0.1.1"
description = "Async, context-aware, modular RuleEngine for Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]

[tool.ruff]
line-length = 88

[tool.setuptools]
packages = ["rule_engine"]
package-dir = {"" = "src"}
