[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rule_engine"
version = "0.2.1"
description = "Async, context-aware, modular RuleEngine for Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "i-iz-adam" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]

[tool.ruff]
line-length = 88

[tool.setuptools]
packages = ["rule_engine"]
package-dir = {"" = "src"}
